added draggable config option

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -62,9 +62,14 @@
         .fs-tree-draggable-target {
           cursor: grab;
           margin-right: 10px;
+          display: none;
 
           &.no-drag {
             cursor: default !important;
+          }
+
+          &.draggable {
+            display: inline;
           }
         }
         .content {
