--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -18,8 +18,11 @@
                       [checked]="tree.checklistSelection.isSelected(node)"
                       (change)="tree.todoLeafItemSelectionToggle(node)">
         </mat-checkbox>
-
-        <mat-icon fsDraggableNodeTarget [ngClass]="{ 'no-drag': !node.canDrag }">drag_handle</mat-icon>
+        <mat-icon 
+            fsDraggableNodeTarget 
+            [ngClass]="{ 'draggable': tree.config.draggable, 'no-drag': !node.canDrag }">
+          drag_handle
+        </mat-icon>
 
         <div class="content" [ngClass]="{ 'clickable': !!node.canNodeClick }" (click)="tree.nodeClick(node)">
           <ng-template
@@ -58,7 +61,11 @@
           (change)="tree.todoItemSelectionToggle(node)">
         </mat-checkbox>
 
-        <mat-icon fsDraggableNodeTarget [ngClass]="{ 'no-drag': !node.canDrag }">drag_handle</mat-icon>
+        <mat-icon 
+            fsDraggableNodeTarget 
+            [ngClass]="{ 'draggable': tree.config.draggable, 'no-drag': !node.canDrag }">
+          drag_handle
+        </mat-icon>
 
         <div class="content" [ngClass]="{ 'clickable': !!node.canNodeClick }" (click)="tree.nodeClick(node)">
           <ng-template
