FC-T421 split out change event into separated callbacks

--- a/playground/app/components/example/example.component.html
+++ b/playground/app/components/example/example.component.html
@@ -12,6 +12,6 @@
                let-first="first"
                let-last="last"
                let-index="index">
-    {{ name }} (ID: {{ id }}) {{ first }} {{ last }} [{{ index}}]
+    {{ name }} (ID: {{ id }})
   </ng-template>
 </fs-tree>
