--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -106,6 +106,10 @@
       .draggable-item {
         position: fixed;
         z-index: 999999;
+        background: #fff;
+        border-radius: 4px;
+        opacity: .95;
+        box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
         //border: 1px #ccc solid;
         //border-radius: 2px;
         //background: rgba(255, 255, 255, 0.5);
