fs-tree-node-first & fs-tree-node-last classes for nodes

--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -7,6 +7,8 @@
                  fsTreeNodeClass
                  class="fs-tree-level-{{node.level}}"
                  [ngClass]="treeNodeData?.klass"
+                 [class.fs-tree-node-first]="node.templateContext?.first"
+                 [class.fs-tree-node-last]="node.templateContext?.last"
                  [fsDraggableNode]="node"
                  [fsCanDrop]="tree.config.canDrop"
                  (dragStart)="tree.onDragStart($event)"
@@ -44,6 +46,8 @@
                  fsTreeNodeClass
                  class="fs-tree-level-{{node.level}}"
                  [ngClass]="treeNodeData?.klass"
+                 [class.fs-tree-node-first]="node.templateContext?.first"
+                 [class.fs-tree-node-last]="node.templateContext?.last"
                  [fsDraggableNode]="node"
                  [fsCanDrop]="tree.config.canDrop"
                  (dragStart)="tree.onDragStart($event)"
