--- a/playground/styles.scss
+++ b/playground/styles.scss
@@ -1,5 +1,5 @@
 @use '~@angular/material' as mat;
-@import '../tools/assets/playground.scss';
+@import '~@firestitch/component-tools/assets/playground.scss';
 @import '~ngx-toastr/toastr.css';
 @import '../src/app/styles.scss';
 
