--- a/playground/app/components/levels-limit/levels-limit.component.html
+++ b/playground/app/components/levels-limit/levels-limit.component.html
@@ -9,10 +9,12 @@
 <p>With max depth 2 and without selection</p>
 
 <fs-tree [config]="config" #tree>
-  <ng-template fsTreeNode let-name="name" let-id="id"
-               let-first="first"
-               let-last="last"
-               let-index="index">
-    {{ name }} (ID: {{ id }})
+  <ng-template 
+      fsTreeNode 
+      let-data="data"
+      let-first="first"
+      let-last="last"
+      let-index="index">
+    {{ data.name }} (ID: {{ data.id }})
   </ng-template>
 </fs-tree>
