--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -32,7 +32,10 @@
             [ngClass]="{ 'draggable': tree.config.draggable, 'no-drag': !node.canDrag }">
           drag_handle
         </mat-icon>
-        <div class="content" [ngClass]="{ 'clickable': !!node.canNodeClick }" (click)="nodeClick(node)">
+        <div 
+            class="content" 
+            [ngClass]="{ 'clickable': !!node.canNodeClick }" 
+            (click)="nodeClick(node)">
           <ng-template
             [ngTemplateOutlet]="treeNodeData?.templateRef || defaultNodeTemplate"
             [ngTemplateOutletContext]="node.templateContext">
