--- a/playground/app/components/example/example.component.html
+++ b/playground/app/components/example/example.component.html
@@ -2,6 +2,8 @@
   <button mat-raised-button (click)="expandAll()">Expand All</button>
   &nbsp;
   <button mat-raised-button (click)="collapseAll()">Collapse All</button>
+  &nbsp;
+  <button mat-raised-button (click)="consoleDebug()">Console Debug</button>
 </div>
 <fs-tree [config]="config" #tree>
   <ng-template 
