--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -4,120 +4,14 @@
 
   $primary: mat.define-palette($theme);
 
-  body.block-selection {
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
-  }
-
-
   fs-tree {
     .droppable-area {
-      display: block;
-      position: fixed;
-      z-index: 99999;
-      background: mat.get-color-from-palette($primary);
-      height: 10px;
-      border-radius: 2px;
-    }
-
-    .draggable-item {
-      .container {
-        .content {
-          cursor: copy !important;
-        }
-      }
-    }
-
-    .no-drop {
-      .container {
-        .content {
-          cursor: no-drop !important;
-        }
-      }
-    }
-
-    .mat-checkbox {
-      margin-right: 10px;
-    }
-
-    .blocked {
-      opacity: 0.5;
-    }
-
-    .node {
-      width: 100%;
-      display: flex;
-      flex: 1;
-      align-items: center;
-      border-radius: 2px;
-
-      .container {
-        display: flex;
-        align-items: center;
-
-        .fs-tree-draggable-target {
-          cursor: grab;
-          margin-right: 10px;
-          display: none;
-
-          &.no-drag {
-            cursor: default !important;
-          }
-
-          &.draggable {
-            display: inline;
-          }
-        }
-        .content {
-          align-self: stretch;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-
-          &.clickable {
-            pointer-events: all;
-            cursor: pointer;
-          }
-        }
-      }
+      background: rgba(mat.get-color-from-palette($primary),.2);
     }
 
     .mat-tree-node {
-      overflow: visible;
-      flex-direction: column;
-
-      &.disabled-node .container{
-        opacity: .5;
-      }
-
-      &.draggable-elem > .node > .container {
-        opacity: .5;
-      }
-
       &.drag-over .node {
-        background-color: mat.get-color-from-palette($primary);
-      }
-
-      .draggable-item {
-        position: fixed;
-        z-index: 999999;
-        background: #fff;
-        border-radius: 4px;
-        opacity: .95;
-        box-shadow: 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
-        //border: 1px #ccc solid;
-        //border-radius: 2px;
-        //background: rgba(255, 255, 255, 0.5);
-        min-height: 40px;
-        padding: 0 15px;
-        //color: rgba(71, 71, 71, 0.5);
-
-        button, .checklist-leaf-node {
-          display: none;
-        }
+        background-color: rgba(mat.get-color-from-palette($primary), .2);
       }
     }
   }
