added FsTreeNodeDirective template strict checking

--- a/playground/app/components/levels-limit/levels-limit.component.html
+++ b/playground/app/components/levels-limit/levels-limit.component.html
@@ -14,7 +14,8 @@
       let-data="data"
       let-first="first"
       let-last="last"
-      let-index="index">
+      let-index="index"
+      let-node="node">
     {{ data.name }} (ID: {{ data.id }})
   </ng-template>
 </fs-tree>
