--- a/playground/styles.scss
+++ b/playground/styles.scss
@@ -1,11 +1,11 @@
 @use '@angular/material' as mat;
-@import '~@firestitch/component-tools/assets/playground.scss';
-@import '~ngx-toastr/toastr.css';
+@use '@firestitch/style/styles' as fs-style;
+@import '@firestitch/component-tools/assets/playground.scss';
+
 @import '../src/app/styles.scss';
 
-
+@include fs-style.core();
 @include mat.core();
-
 @include fs-tree(mat.$blue-palette);
 
 mat-tree {
